@@ -1,3 +1,7 @@
+2002-03-14 Peter Bienstman  <Peter.Bienstman@rug.ac.be>
+
+	* generalslab.cpp: Change branch cut.
+
 2002-01-21 Peter Bienstman  <Peter.Bienstman@rug.ac.be>
 
 	* generalslab.h: Update support for parameter getting/setting.
